# interlock

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
contracts/: AGENTS.md  README.md  README_note.md
contracts/audit-envelope/v1.0.0/: CHANGELOG.md  README.md  schema.json
contracts/hook-manifest/v1.0.0/: CHANGELOG.md  README.md  schema.json
contracts/integrity-inputs/v1.0.0/: CHANGELOG.md  README.md  schema.json
contracts/sandbox-config/v1.0.0/: CHANGELOG.md  README.md  schema.json
contracts/session-stream-jsonl/v1.0.0/: CHANGELOG.md  README.md  schema.json
governance/: audit-event-ownership.md  composition.md  freeze-manager-constraint.md  layer-constraints.md
src/tidereach/interlock/: __init__.py  cli.py  dispatch.py
tests/: test_dispatch.py
