[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tidereach-interlock"
version = "0.1.0"
description = "Tidereach L0 attestation/glue + L4 policy module"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tidereach = "tidereach.interlock.dispatch:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
